Create header section with nav bar

--- a/homePage.html
+++ b/homePage.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <!-- Header Section: contains UH Logo and text based navigation separated by bars the increase readability-->
+    <header>
+        <nav class="navbar">
+            
+            <!-- Website Logo-->
+            <div class="logo">
+                <img src="./assets/images/uh-logo-placeholder.png" alt="University Logo" />
+            </div>
+            <!-- Create text based nav bar with separators-->
+            <ul class="nav-links">
+                <li><a href="homePage.html">Home</a></li>
+                <li><span>|</span></li>
+                <li><a href="About.html">About Us</a></li>
+                <li><span>|</span></li>
+                <li><a href="RoomBooking.html">Room Booking</a></li>
+                <li><span>|</span></li>
+                <li><a href="FAQpage.html">FAQ</a></li>
+                <li><span>|</span></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </nav>
 </body>
 </html>
