--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -28,5 +28,20 @@
                 <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
+    </header>
+
+<!-- Hero Section ; Large photo for visual intrigue, welcoming headline/message-->
+ <section class="hero">
+    
+    <!-- Container for large image ; switch out file name with actual file later-->
+    <div class="hero-media">
+        <img src="./assets/images/UH-Campus.jpg" alt="Campus" />
+    </div>
+
+    <!--Overlay text for the hero section-->
+    <div class="hero-text">
+        <h1>Welcome to UH Sugar Land Student Center</h1>
+        <p>Your place to study, relax, and connect with fellow students.</p>
+    </div>
 </body>
 </html>
