Create main section of the home page as well as add footer

--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -45,5 +45,20 @@
         </div>
     </section>
 
+    <!-- Main Content of the page; Describe what student center offers; lead viewers to other pages for more info-->
+    <main>
+        <section class="intro">
+            <h2>About the Student Center</h2>
+            <p>
+                The UH Sugar Land Student Center offers spaces designed for collaboration, studying,
+                and recreation. Explore our facilities, services, and room booking options.
+            </p>
+        </section>
+    </main>
+
+    <!-- Add a Footer to include ownership/copyright; Include contact info and social media links later on-->
+    <footer>
+        <p>&copy; 2025 UH Sugar Land Student Center. All rights reserved.</p>
+    </footer>
 </body>
 </html>
