Create header section for About page

--- a/frontend/About.html
+++ b/frontend/About.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header section-->
+     <header>
+        <nav class="navbar">
+           <!--Website Logo-->
+           <div class="logo">
+                <  img src="./assets/images/uh-logo-placeholder.png" alt="University Logo" />
+           </div> 
+
+           <!--Site Title-->
+           <h1 class="site-title">University of Houston at Sugar Land</h1>
+
+           <!-- Navigation Menu-->
+           <ul class="nav-links">
+                <li><a href="homePage.html">Home</a></li>
+                <li><span>|</span></li>
+                <li><a href="About.html">About Us</a></li>
+                <li><span>|</span></li>
+                <li><a href="RoomBooking.html">Room Booking</a></li>
+                <li><span>|</span></li>
+                <li><a href="FAQpage.html">FAQ</a></li>
+                <li><span>|</span></li>
+                <li><a href="Contact.html">Contact</a></li>
+           </ul>
+        </nav>
+     </header>
     
 </body>
 </html>
