Added Main Content section of the page

--- a/frontend/About.html
+++ b/frontend/About.html
@@ -7,31 +7,60 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header section-->
-     <header>
+    <!-- Header Section: contains UH Logo and text based navigation separated by bars -->
+    <header>
         <nav class="navbar">
-           <!--Website Logo-->
-           <div class="logo">
-                <  img src="./assets/images/uh-logo-placeholder.png" alt="University Logo" />
-           </div> 
+            <!-- Website Logo (left) -->
+            <div class="logo">
+                <img src="./assets/images/uh-logo-placeholder.png" alt="University Logo" />
+            </div>
 
-           <!--Site Title-->
-           <h1 class="site-title">University of Houston at Sugar Land</h1>
+            <!-- Site Title -->
+            <h1 class="site-title">University of Houston at Sugar Land</h1>
 
-           <!-- Navigation Menu-->
-           <ul class="nav-links">
+            <!-- Navigation Menu (text-based with separators, right) -->
+            <ul class="nav-links">
                 <li><a href="homePage.html">Home</a></li>
                 <li><span>|</span></li>
                 <li><a href="About.html">About Us</a></li>
                 <li><span>|</span></li>
                 <li><a href="RoomBooking.html">Room Booking</a></li>
                 <li><span>|</span></li>
-                <li><a href="FAQpage.html">FAQ</a></li>
+                <li><a href="FAQPage.html">FAQ</a></li>
                 <li><span>|</span></li>
                 <li><a href="Contact.html">Contact</a></li>
-           </ul>
+            </ul>
         </nav>
-     </header>
-    
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <section class="about-section">
+            <h1>About the Student Center</h1>
+            <p>
+                The UH Sugar Land Student Center offers spaces designed for collaboration, studying, and recreation.
+                Explore our facilities, services, and room booking options.
+            </p>
+        </section>
+
+        <section class="mission-section">
+            <h2>Our Mission</h2>
+            <p>
+                Our Student Center is dedicated to enhancing the student experience by providing welcoming spaces, helpful services, and opportunities for students to connect, learn, and grow.
+            </p>
+        </section>
+
+        <section class="community-section">
+            <h2>Community & Engagement</h2>
+            <p>
+                The Student Center hosts programs and events designed to foster a vibrant campus community, including workshops, cultural celebrations, and social activities.
+            </p>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 UH Sugar Land Student Center. All rights reserved.</p>
+    </footer>
 </body>
 </html>
