Create main content section with footer and link JS file

--- a/frontend/FAQpage.html
+++ b/frontend/FAQpage.html
@@ -28,5 +28,44 @@
     </header>
 
     <!--Main Content-->
+    <main>
+        <h1>Frequently Asked Questions</h1>
+        
+        <div class="faq-container"></div>
+            
+            <div class="faq-item">
+                <div class="faq-question">What are Student Center hours?</div>
+                <div class="faq-answer">The Student Center is open Mon-Fri, 9 a.m.-5 p.m.</div>
+            </div>
+
+            <div class="faq-item">
+                <div class="faq-question">How do I book a room?</div>
+                <div class="faq-answer">Rooms can be booked through our online Room Booking page, or you request a room at the front desk insinde the Student Center.</div>
+            </div>
+
+            <div class="faq-item">
+                <div class="faq-question">Can student organizations host events here?</div>
+                <div class="faq-answer">Yes, registered student organizations can host events in designated areas. Approval from Student Center office is required before booking.</div>
+            </div>
+
+            <div class="faq-item">
+                <div class="faq-question">Is food allowed in study areas?</div>
+                <div class="faq-answer">Bottled drinks and snacks are permitted in the study areas, we just ask that you please keep these areas clean to ensure a relaxing, comfortable environment.</div>
+            </div>
+
+            <div class="faq-item">
+                <div class="faq-question">Are there printing services available?</div>
+                <div class="faq-answer">There are printers in the study areas that are free for students to use. Please only print what you need to ensure others have access to printer resources if they need it.</div>
+            </div>
+        </div>
+    </main>
+
+    <!--Footer-->
+    <footer>
+        <p>&copy; 2025 UH Sugar Land Student Center. All rights reserved.</p>
+    </footer>
+
+    <!--Link external JS-->
+    <script src="script.js"></script>
 </body>
 </html>
