--- a/frontend/RoomBooking.html
+++ b/frontend/RoomBooking.html
@@ -6,6 +6,28 @@
     <title>Book A Room</title>
 </head>
 <body>
+    <!-- Header Section -->
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="./assets/images/uh-logo-placeholder.png" alt="University Logo" />
+            </div>
+            <h1 class="site-title">University of Houston at Sugar Land</h1>
+            <ul class="nav-links">
+                <li><a href="homePage.html">Home</a></li>
+                <li><span>|</span></li>
+                <li><a href="About.html">About Us</a></li>
+                <li><span>|</span></li>
+                <li><a href="RoomBooking.html">Room Booking</a></li>
+                <li><span>|</span></li>
+                <li><a href="FAQPage.html">FAQ</a></li>
+                <li><span>|</span></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     
+
 </body>
 </html>
