Clean up Header section in the files

--- a/frontend/About.html
+++ b/frontend/About.html
@@ -7,18 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header Section: contains UH Logo and text based navigation separated by bars -->
+    <!-- Header Section -->
     <header>
         <nav class="navbar">
-            <!-- Website Logo (left) -->
             <div class="logo">
                 <img src="./assets/images/uh-logo-placeholder.png" alt="University Logo" />
             </div>
-
-            <!-- Site Title -->
             <h1 class="site-title">University of Houston at Sugar Land</h1>
-
-            <!-- Navigation Menu (text-based with separators, right) -->
             <ul class="nav-links">
                 <li><a href="homePage.html">Home</a></li>
                 <li><span>|</span></li>
