Add accordion to FAQ so that only questions displayed and then answers are displayed when button clicked. Add style of button to CSS and behavior to JS file

--- a/frontend/FAQpage.html
+++ b/frontend/FAQpage.html
@@ -30,36 +30,61 @@
 
     <!--Main Content-->
     <main>
-        <h1>Frequently Asked Questions</h1>
-        
-        <div class="faq-container"></div>
-            
-            <div class="faq-item">
-                <div class="faq-question">What are Student Center hours?</div>
-                <div class="faq-answer">The Student Center is open Mon-Fri, 9 a.m.-5 p.m.</div>
-            </div>
+  <h1>Frequently Asked Questions</h1>
 
-            <div class="faq-item">
-                <div class="faq-question">How do I book a room?</div>
-                <div class="faq-answer">Rooms can be booked through our online Room Booking page, or you request a room at the front desk insinde the Student Center.</div>
-            </div>
+  <div class="faq-container">
+    <!-- Item 1 -->
+    <div class="faq-item">
+      <button class="faq-question" aria-expanded="false">
+        What are student center hours?
+      </button>
+      <div class="faq-answer" hidden>
+        The student center is open Monday through Friday from 8:00 AM to 10:00 PM and on weekends from 10:00 AM to 6:00 PM.
+      </div>
+    </div>
 
-            <div class="faq-item">
-                <div class="faq-question">Can student organizations host events here?</div>
-                <div class="faq-answer">Yes, registered student organizations can host events in designated areas. Approval from Student Center office is required before booking.</div>
-            </div>
+    <!-- Item 2 -->
+    <div class="faq-item">
+      <button class="faq-question" aria-expanded="false">
+        How do I book a room?
+      </button>
+      <div class="faq-answer" hidden>
+        Rooms can be booked through our Room Booking page or at the student center front desk.
+      </div>
+    </div>
 
-            <div class="faq-item">
-                <div class="faq-question">Is food allowed in study areas?</div>
-                <div class="faq-answer">Bottled drinks and snacks are permitted in the study areas, we just ask that you please keep these areas clean to ensure a relaxing, comfortable environment.</div>
-            </div>
+    <!-- Item 3 -->
+    <div class="faq-item">
+      <button class="faq-question" aria-expanded="false">
+        Can student groups host events here?
+      </button>
+      <div class="faq-answer" hidden>
+        Yes, registered student groups may host events in designated areas. Prior approval is required through the student center office.
+      </div>
+    </div>
 
-            <div class="faq-item">
-                <div class="faq-question">Are there printing services available?</div>
-                <div class="faq-answer">There are printers in the study areas that are free for students to use. Please only print what you need to ensure others have access to printer resources if they need it.</div>
-            </div>
-        </div>
-    </main>
+    <!-- Item 4 -->
+    <div class="faq-item">
+      <button class="faq-question" aria-expanded="false">
+        Is food allowed in study areas?
+      </button>
+      <div class="faq-answer" hidden>
+        Only bottled drinks and small snacks are allowed in study areas. Full meals must be eaten in designated dining areas.
+      </div>
+    </div>
+
+    <!-- Item 5 -->
+    <div class="faq-item">
+      <button class="faq-question" aria-expanded="false">
+        Is parking available?
+      </button>
+      <div class="faq-answer" hidden>
+        Yes, there are multiple parking lots near the student center. Please follow campus parking guidelines.
+      </div>
+    </div>
+  </div>
+</main>
+
 
     <!--Footer-->
     <footer>
