Add footer to room booking HTML

--- a/frontend/RoomBooking.html
+++ b/frontend/RoomBooking.html
@@ -84,5 +84,10 @@
         </form>
     </main>
 
+    <!--Footer-->
+    <footer>
+        <p>&copy; 2025 UH Sugar Land Student Center. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
