header and main section and footer for contact.html

--- a/frontend/Contact.html
+++ b/frontend/Contact.html
@@ -8,6 +8,51 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <!-- Header Section -->
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="./assets/images/uh-logo-placeholder.png" alt="University Logo" />
+            </div>
+            <h1 class="site-title">University of Houston at Sugar Land</h1>
+            <ul class="nav-links">
+                <li><a href="homePage.html">Home</a></li>
+                <li><span>|</span></li>
+                <li><a href="About.html">About Us</a></li>
+                <li><span>|</span></li>
+                <li><a href="RoomBooking.html">Room Booking</a></li>
+                <li><span>|</span></li>
+                <li><a href="FAQPage.html">FAQ</a></li>
+                <li><span>|</span></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--Main Content-->
+    <main>
+        <h1>Contact Us</h1>
+        
+        <section class="contact-intro">
+            <p>
+                Have questions? We're here to help! Reach out to the UH Sugar Land Student Center through the contact information below or by 
+                filling out the contact form. We look forward to assisting you!
+            </p>
+        </section>
+
+        <section class="contact-form-section">
+            <p>Contact form here.</p>
+        </section>
+
+        <section class="contact-info">
+            <p>Other contact info like phone number, email, address of student center</p>
+        </section>
+    </main>
+
+    <!--Footer-->
+    <footer>
+        <p>&copy; 2025 UH Sugar Land Student Center. All rights reserved.</p>
+    </footer>
     
 </body>
 </html>
