Finally got logo working and applied to all html pages

--- a/frontend/Contact.html
+++ b/frontend/Contact.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="./assets/UH-Logo.jpg" alt="University of Houston Logo">
+                <img src="./assets/images/UH-Logo.jpg" alt="University of Houston Logo">
 
             </div>
             <h1 class="site-title">University of Houston at Sugar Land</h1>
