--- a/frontend/FAQpage.html
+++ b/frontend/FAQpage.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="./assets/images/uh-logo-placeholder.png" alt="University Logo" />
+                <img src="./assets/images/UH-Logo.jpg" alt="University of Houston Logo">
             </div>
             <h1 class="site-title">University of Houston at Sugar Land</h1>
             <ul class="nav-links">
