add contact information, contact form and script to confirm submission

--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -34,7 +34,7 @@
     
         <!-- Container for large image ; switch out file name with actual file later-->
         <div class="hero-media">
-            <img src="./assets/images/UH-Campus.jpg" alt="Campus" />
+            <img src="./assets/images/University of Houston Sugar Land Photo.jpg" alt="Campus" />
         </div>
 
         <!--Overlay text for the hero section-->
