--- a/frontend/Contact.html
+++ b/frontend/Contact.html
@@ -13,7 +13,6 @@
         <nav class="navbar">
             <div class="logo">
                 <img src="./assets/images/UH-Logo.jpg" alt="University of Houston Logo">
-
             </div>
             <h1 class="site-title">University of Houston at Sugar Land</h1>
             <ul class="nav-links">
@@ -30,7 +29,7 @@
         </nav>
     </header>
 
-    <!--Main Content-->
+    <!-- Main Content -->
     <main>
         <h1>Contact Us</h1>
         
@@ -41,19 +40,41 @@
             </p>
         </section>
 
+        <!-- Contact Form Section -->
         <section class="contact-form-section">
-            <p>Contact form here.</p>
+            <form id="contactForm" class="booking-form">
+                <!-- Name Field -->
+                <label for="name">Full Name:<span class="required">*</span></label>
+                <input type="text" id="name" name="name" class="form-input" required>
+
+                <!-- Email Field -->
+                <label for="email">Email:<span class="required">*</span></label>
+                <input type="email" id="email" name="email" class="form-input" required>
+
+                <!-- Message Field -->
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="6" maxlength="500" placeholder="Enter your message here..."></textarea>
+
+                <!-- Submit Button -->
+                <button type="submit" class="submit-button">Submit</button>
+            </form>
         </section>
 
+        <!-- Contact Information Section -->
         <section class="contact-info">
-            <p>Other contact info like phone number, email, address of student center</p>
+            <h2>Student Center Contact Information</h2>
+            <p><strong>Phone:</strong> (281) 555-4720</p>
+            <p><strong>Email:</strong> <a href="mailto:studentcenter@uhsugarland.edu">studentcenter@uhsugarland.edu</a></p>
+            <p><strong>Address:</strong> 14000 University Blvd, Sugar Land, TX 77479</p>
+            <p><strong>Hours:</strong> Monday – Friday: 9:00 AM – 5:00 PM</p>
         </section>
+
     </main>
 
-    <!--Footer-->
+    <!-- Footer -->
     <footer>
         <p>&copy; 2025 UH Sugar Land Student Center. All rights reserved.</p>
     </footer>
-    
 </body>
 </html>
+
