add images and more sections for more content on page

--- a/frontend/About.html
+++ b/frontend/About.html
@@ -39,17 +39,57 @@
             </p>
         </section>
 
+        <!-- Mission Section -->
         <section class="mission-section">
-            <h2>Our Mission</h2>
-            <p>
-                Our Student Center is dedicated to enhancing the student experience by providing welcoming spaces, helpful services, and opportunities for students to connect, learn, and grow.
-            </p>
+            <div class="mission-text">
+                <h2>Our Mission</h2>
+                <p>
+                    The UH Sugar Land Student Center serves as the hub of campus life—offering spaces that foster collaboration, 
+                    relaxation, and community. Our mission is to support academic success while enhancing the student experience 
+                    through inclusive programs and welcoming environments.
+                </p>
+            </div>
+            <div class="mission-image">
+                <img src="./assets/images/Students-Relaxing-Together.jpg" alt="Students relaxing in the UH Sugar Land Student Center">
+            </div>
         </section>
 
-        <section class="community-section">
-            <h2>Community & Engagement</h2>
+        <!-- Facilities Section -->
+        <section class="facilities">
+            <h2>Facilities at a Glance</h2>
+            <div class="facility-grid">
+                <div class="facility-item">
+                    <img src="./assets/images/Study-Rooms.jpg" alt="Study Rooms">
+                    <h3>Study Rooms</h3>
+                    <p>Quiet, private spaces for individual or group study sessions.</p>
+                </div>
+                <div class="facility-item">
+                    <img src="./assets/images/Student-Lounge.jpg" alt="Student Lounge">
+                    <h3>Student Lounge</h3>
+                    <p>Relax, connect, and recharge in our comfortable lounge areas.</p>
+                </div>
+                
+            </div>
+        </section>
+
+        <!-- Community Section -->
+        <section class="community">
+            <h2>Building a Community</h2>
             <p>
-                The Student Center hosts programs and events designed to foster a vibrant campus community, including workshops, cultural celebrations, and social activities.
+                From leadership workshops and organization meetings to cultural celebrations and game nights, 
+                the Student Center is more than a space—it’s a community. Students can host events, collaborate 
+                on projects, and meet peers from diverse backgrounds.
+            </p>
+            <img src="./assets/images/Students-Attending-Event.jpg" alt="Students attending an event in the Student Center">
+        </section>
+
+        <!-- Call to Action -->
+        <section class="cta">
+            <h2>Visit the Student Center Today</h2>
+            <p>
+                Explore, connect, and experience campus life at UH Sugar Land. 
+                <a href="RoomBooking.html">Book a room</a> or 
+                <a href="Contact.html">get in touch</a> to learn more!
             </p>
         </section>
     </main>
@@ -60,3 +100,4 @@
     </footer>
 </body>
 </html>
+
