Testing styling for about page

--- a/frontend/About.html
+++ b/frontend/About.html
@@ -56,19 +56,18 @@
 
         <!-- Facilities Section -->
         <section class="facilities">
-            <h2>Facilities at a Glance</h2>
-            <div class="facility-grid">
-                <div class="facility-item">
-                    <img src="./assets/images/Study-Rooms.jpg" alt="Study Rooms">
+            <h2 style="text-align: center;">Facilities at a Glance</h2>
+            <div class="facility-grid" style="display: flex; justify-content: center; gap: 40px; margin-top: 20px;">
+                <div class="facility-item" style="text-align: center; width: 40%;">
+                    <img src="./assets/images/Study-Rooms.jpg" alt="Study Rooms" style="width: 100%; border-radius: 10px;">
                     <h3>Study Rooms</h3>
                     <p>Quiet, private spaces for individual or group study sessions.</p>
                 </div>
-                <div class="facility-item">
-                    <img src="./assets/images/Student-Lounge.jpg" alt="Student Lounge">
+                <div class="facility-item" style="text-align: center; width: 40%;">
+                    <img src="./assets/images/Student-Lounge.jpg" alt="Student Lounge" style="width: 100%; border-radius: 10px;">
                     <h3>Student Lounge</h3>
                     <p>Relax, connect, and recharge in our comfortable lounge areas.</p>
                 </div>
-                
             </div>
         </section>
 
@@ -100,4 +99,5 @@
     </footer>
 </body>
 </html>
+
 
