change layout of items on about page and format to give more style

--- a/frontend/About.html
+++ b/frontend/About.html
@@ -41,21 +41,25 @@
 
         <!-- Mission Section -->
         <section class="mission-section">
-            <div class="mission-text">
-                <h2>Our Mission</h2>
-                <p>
-                    The UH Sugar Land Student Center serves as the hub of campus life—offering spaces that foster collaboration, 
-                    relaxation, and community. Our mission is to support academic success while enhancing the student experience 
-                    through inclusive programs and welcoming environments.
-                </p>
-            </div>
-            <div class="mission-image">
-                <img src="./assets/images/Students-Relaxing-Together.jpg" alt="Students relaxing in the UH Sugar Land Student Center">
+            <div class="mission-box">
+                <div class="mission-text">
+                    <h2>Our Mission</h2>
+                    <p>
+                        The UH Sugar Land Student Center serves as the hub of campus life—offering spaces that foster collaboration, 
+                        relaxation, and community. Our mission is to support academic success while enhancing the student experience 
+                        through inclusive programs and welcoming environments.
+                    </p>
+                </div>
+                <div class="mission-image">
+                    <img src="./assets/images/Students-Relaxing-Together.jpg" alt="Students relaxing in the UH Sugar Land Student Center">
+                </div>
             </div>
         </section>
 
         <!-- Facilities Section -->
         <section class="facilities">
+        
+
             <h2 style="text-align: center;">Facilities at a Glance</h2>
             <div class="facility-grid" style="display: flex; justify-content: center; gap: 40px; margin-top: 20px;">
                 <div class="facility-item" style="text-align: center; width: 40%;">
@@ -72,18 +76,25 @@
         </section>
 
         <!-- Community Section -->
-        <section class="community">
-            <h2>Building a Community</h2>
-            <p>
-                From leadership workshops and organization meetings to cultural celebrations and game nights, 
-                the Student Center is more than a space—it’s a community. Students can host events, collaborate 
-                on projects, and meet peers from diverse backgrounds.
-            </p>
-            <img src="./assets/images/Students-Attending-Event.jpg" alt="Students attending an event in the Student Center">
+        <section class="community-section">
+            <div class="community-box">
+                <div class="community-image">
+                    <img src="./assets/images/Students-Attending-Event.jpg" alt="Students attending an event in the Student Center">
+                </div>
+                <div class="community-text">
+                    <h2>Building a Community</h2>
+                    <p>
+                        From leadership workshops and organization meetings to cultural celebrations and game nights, 
+                        the Student Center is more than a space—it’s a community. Students can host events, collaborate 
+                        on projects, and meet peers from diverse backgrounds.
+                    </p>
+                </div>
+            </div>
         </section>
 
         <!-- Call to Action -->
         <section class="cta">
+
             <h2>Visit the Student Center Today</h2>
             <p>
                 Explore, connect, and experience campus life at UH Sugar Land. 
