updated formatting added room selection to room book form

--- a/frontend/RoomBooking.html
+++ b/frontend/RoomBooking.html
@@ -54,6 +54,18 @@
                 <input type="text" id="studentID" name="studentID" required />
             </div>
             
+            <!--Room Selection(required)-->
+            <div class="form-group">
+                <label for="room">Select Room:<span class="required">*</span></label>
+                <select id="room" name="room" required>
+                    <option value="" disabled selected>Select a room...</option>
+                    <option value="studyRoom1">Study Room 1</option>
+                    <option value="studyRoom2">Study Room 2</option>
+                    <option value="conferenceRoomA">Conference Room A</option>
+                    <option value="conferenceRoomB">Conference Room B</option>
+                    <option value="eventHall">Event Hall</option>
+                </select>
+            
             <!--Date Field(required)-->
             <div class="form-group">
                 <label for="date">Requested Date:<span class="required">*</span></label>
