--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -40,9 +40,16 @@
         <!--Overlay text for the hero section-->
         <div class="hero-text">
             <h1>Welcome to UH Sugar Land Student Center</h1>
-            <p>Your place to study, relax, and connect with fellow students.</p>
         </div>
     </section>
+
+    <!--Put welcome text below the image so it is more visible-->
+    <section class="welcome-text">
+        <p>
+            The University of Houston at Sugar Land Student Center is your go-to destination for collaboration, study, 
+            and relaxation. Whether you're looking for a quiet place to focus or a space to host your next student event,
+            the Student Center has everything you need to succeed.
+        </p>
 
     <!-- Main Content of the page; Describe what student center offers; lead viewers to other pages for more info-->
     <main>
