fixed footer being formatted with the text on home page. Now formatting for text is wrong

--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <!-- Header Section -->
@@ -29,29 +29,27 @@
         </nav>
     </header>
 
-    <!-- Hero Section ; Large photo for visual intrigue, welcoming headline/message-->
+    <!-- Hero Section -->
     <section class="hero">
-    
-        <!-- Container for large image ; switch out file name with actual file later-->
         <div class="hero-media">
             <img src="./assets/images/University of Houston Sugar Land Photo.jpg" alt="Campus" />
         </div>
 
-        <!--Overlay text for the hero section-->
         <div class="hero-text">
             <h1>Welcome to UH Sugar Land Student Center</h1>
         </div>
     </section>
 
-    <!--Put welcome text below the image so it is more visible-->
+    <!-- Welcome Text -->
     <section class="welcome-text">
         <p>
             The University of Houston at Sugar Land Student Center is your go-to destination for collaboration, study, 
             and relaxation. Whether you're looking for a quiet place to focus or a space to host your next student event,
             the Student Center has everything you need to succeed.
         </p>
+    </section> <!-- ✅ Added closing tag here -->
 
-    <!-- Main Content of the page; Describe what student center offers; lead viewers to other pages for more info-->
+    <!-- Main Content -->
     <main>
         <section class="intro">
             <h2>About the Student Center</h2>
@@ -62,10 +60,9 @@
         </section>
     </main>
 
-    <!-- Add a Footer to include ownership/copyright; Include contact info and social media links later on-->
+    <!-- Footer -->
     <footer>
         <p>&copy; 2025 UH Sugar Land Student Center. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
