Add an Events section to the home page for more content

--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -60,6 +60,34 @@
         </section>
     </main>
 
+    <!-- Upcoming Events Section -->
+    <section class="events-section">
+        <h2>Upcoming Events</h2>
+        <div class="events-grid">
+             <!-- Event 1 -->
+            <div class="event-card">
+                <img src="./assets/images/Leadership-Workshop.jpg" alt="Leadership Workshop">
+                <h3>Leadership Workshop</h3>
+                <p>Join student leaders on Nov 14, 2025, for a day of team-building and professional development.</p>
+            </div>
+
+            <!-- Event 2 -->
+            <div class="event-card">
+                <img src="./assets/images/Game-Night.jpg" alt="Game Night">
+                <h3>Student Game Night</h3>
+                <p>Unwind with friends during our Game Night on Nov 21, 2025 — snacks, games, and prizes await!</p>
+            </div>
+
+            <!-- Event 3 -->
+            <div class="event-card">
+                <img src="./assets/images/Cultural-Fair.jpg" alt="Cultural Fair">
+                <h3>Cultural Fair</h3>
+                <p>Experience diversity and community at our Cultural Fair on Dec 5, 2025. Food, music, and art from around the world!</p>
+            </div>
+        </div>
+    </section>
+
+    
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 UH Sugar Land Student Center. All rights reserved.</p>
