wrap all the bodies of html files and then add style to keep footer at bottom of page without messing up hero image

--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="page-wrapper">
     <!-- Header Section -->
     <header>
         <nav class="navbar">
@@ -92,5 +93,6 @@
     <footer>
         <p>&copy; 2025 UH Sugar Land Student Center. All rights reserved.</p>
     </footer>
+    </div>
 </body>
 </html>
