--- a/frontend/FAQpage.html
+++ b/frontend/FAQpage.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="page-wrapper">
     <!-- Header Section -->
     <header>
         <nav class="navbar">
@@ -92,7 +93,7 @@
     <footer>
         <p>&copy; 2025 UH Sugar Land Student Center. All rights reserved.</p>
     </footer>
-
+    </div>
 
 </body>
 </html>
