--- a/frontend/About.html
+++ b/frontend/About.html
@@ -59,22 +59,34 @@
 
         <!-- Facilities Section -->
         <section class="facilities">
-        
-
             <h2 style="text-align: center;">Facilities at a Glance</h2>
-            <div class="facility-grid" style="display: flex; justify-content: center; gap: 40px; margin-top: 20px;">
-                <div class="facility-item" style="text-align: center; width: 40%;">
+
+            <div class="facility-grid" style="display: flex; justify-content: center; flex-wrap: wrap; gap: 40px; margin-top: 20px;">
+        
+                <!-- Study Rooms -->
+                <div class="facility-item" style="text-align: center; width: 30%;">
                     <img src="./assets/images/Study-Rooms.jpg" alt="Study Rooms" style="width: 100%; border-radius: 10px;">
                     <h3>Study Rooms</h3>
                     <p>Quiet, private spaces for individual or group study sessions.</p>
                 </div>
-                <div class="facility-item" style="text-align: center; width: 40%;">
+
+                <!-- Student Lounge -->
+                <div class="facility-item" style="text-align: center; width: 30%;">
                     <img src="./assets/images/Student-Lounge.jpg" alt="Student Lounge" style="width: 100%; border-radius: 10px;">
                     <h3>Student Lounge</h3>
                     <p>Relax, connect, and recharge in our comfortable lounge areas.</p>
                 </div>
+
+                <!-- Event Hall -->
+                <div class="facility-item" style="text-align: center; width: 30%;">
+                    <img src="./assets/images/Event-Hall.jpg" alt="Event Hall" style="width: 100%; border-radius: 10px;">
+                    <h3>Event Hall</h3>
+                    <p>Host student organization events, workshops, or campus celebrations in our modern event space.</p>
+                </div>
+
             </div>
         </section>
+
 
         <!-- Community Section -->
         <section class="community-section">
